# smartcalc

./: HOWTO.md  README.md  pyproject.toml
smartcalc/: core.py
